# gamma_smc_cu

./: .gitignore  CMakeLists.txt  FUNCTIONAL_ANNOTATION.md  README.md  REPRODUCING.md  ROADMAP.md  demo.ipynb  main.aux  pixi.toml  pytest.ini  todo.md
.github/workflows/: docs.yml
_scratch/: demographic_correction.md  main.out  old_main.tex
_scratch/old_benchmarks/: accuracy.py  accuracy_ep.py  accuracy_gamma_smc.npz  accuracy_hmm_vs_gsmc.npz  bench_flow_fb_accuracy.py  bench_fwd_speedup.py  bench_gamma_deep.npz  bench_gamma_smc_deep.py  bench_kernel_profile.py  bench_results.npz  bench_vs_competitors.py  comprehensive_bench.py  make_fig_gamma_deep.py  plot.py
analysis/1kg_chr21/: 00_download.sh  01_run_inference.py  02_analysis.py  03_gene_panels.py  04_focused_genes.py  05_pop_detail.py  07_supervised_umap.py  08_outlier_umap.py  09_outlier_features.py
analysis/akbari_479_tmrca/: STRATEGY.md  akbari_lead_variants_grch38.tsv  heatmap_matrix_kya.csv  heatmap_row_order.csv  infer_akbari_windows.py  lift_akbari_positions.py  make_heatmap.py  make_heatmap_2col.py  make_heatmap_linear.py  make_heatmap_panels.py  slurm_infer_akbari.sh  slurm_infer_akbari_full.sh  slurm_infer_akbari_pop.sh
analysis/genome_wide/: aggregate.py  infer_chromosome.py  postprocess.py  reaggregate_from_npz.py  slurm_analyze.sh  slurm_build.sh  slurm_diagnose.sh  slurm_infer_all.sh  slurm_infer_dgx.sh  slurm_postprocess.sh
analysis/orthogonal_v41/: .gitignore  tools_ready.txt
analysis/relate_clues/: README.md
analysis/trem2_deep_dive/: CRITICAL_FINDING.md  DISCUSSION_DRAFT.md  DISCUSSION_DRAFT_v2.md  FINDINGS.md  FOXP4_SELECTION_AUDIT.md  NOVELTY_AUDIT_RESULT.md  REVISED_FRAMING.md  check_ranks_and_h12.py  find_true_sweep_variant.py  run_ld_colocalization.py  run_ld_sweep_to_region.py  summarize_selscan.py
benchmarks/: accuracy_vs_schweiger.py  bench.py  bench_blockwise.py  bench_demographics.py  bench_flow_context.py  bench_gamma_smc_deep.py  bench_gpu.py  bench_multigpu.py  bench_results.json  demo_results.json  make_figures.py  multigpu_bench.json  nature_figures.py
benchmarks/pairwise_scaling/: bench_chunking.py  plot_benchmarks.py  profile_kernel.py  quick_test.py  results.csv  results_cpu.csv  run_bench_chunking.sh  run_benchmark.py  run_cpu_benchmark.py  run_final_benchmark.py  run_quick_test.sh  run_stdpopsim_scaling.py  scaling_results.csv  slurm_benchmark.sh  slurm_bit_identity.sh  slurm_chunking.sh  slurm_final_benchmark.sh  slurm_perf_bench.sh  slurm_perf_build.sh  slurm_scaling.sh  test_bit_identity.py  verify_gamma_smc.sh  verify_gsmc_quick.sh
benchmarks/test_suite_stdpopsim/: aggregate_and_plot.py  bench_inputs.py  bench_paths.py  configs.json  configs.py  diagnose_auto_estimate.py  diagnose_canfam.py  diagnose_oracle_diff.py  diagnose_pi_estimator.py  diagnose_remaining_gaps.py  diagnose_rho_scaling.py  run_one.py  slurm_aggregate.sh  slurm_array.sh  (+2 more)
docs/: algorithm.md  api.md  blockwise.md  conf.py  cuda.md  examples.md  figures.md  index.md  requirements.txt  test_suite.md
findings_database/: MANIFEST.csv  README.md
local_memory/: DEMOGRAPHY.md  IDEAS.md  USAGE.md  plan.md  review.md  todo.md
manuscript/: S1_Text.aux  S1_Text.out  S1_Text.tex  main.aux  main.bbl  main.blg  main.tex  main_v2.tex  references.bib
src/: bindings.cpp  demography.cpp  flow_field.cpp
tests/: conftest.py  pytest.ini  test_paper_formulas.py
(+2300 files in other folders)
